--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </main>
     <footer>
-
+        All right's resrved ©️ 2023 | created with ❤️ RahulSK
     </footer>
     <script src="js.js"></script>
 </body>
